--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -38,16 +38,13 @@ body {
   background-size: cover;
 }
 
-/*Sidebar Section*/
-section#sidebar {
-  width: 280px;
-  float: right;
-
-}
-
 .portfolio-item {
   margin-bottom: 30px;
 }
 .end{
   background-color: #cc1a0e;
+}
+.py-5{
+  padding-bottom: 1rem!important;
+  padding-top: 1rem!important;
 }
